--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -69,7 +69,7 @@
         "li2"                   : "European Highlights Tour",
         "li3"                   : "Japanese Culture and Cuisine",
         "li4"                   : "African Safari Adventure",
-        "location"              : "Tashkent, Shahontohur district,\ncenter-15, 10-house, 29-room",
+        "location"              : "Tashkent, Shayxontohur district,\ncenter-15, 10-house, 29-room",
         "ull"                   : "Design and Developed By Silicon Hub.",
         "rights"                : "© 2024 Silicon Hub. All Right Reserved."
     },
