--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -69,7 +69,7 @@
         "li2"                   : "Yevropa bo‘ylab sayohat",
         "li3"                   : "Yaponiya madaniyati va oshxonasi",
         "li4"                   : "Afrika safari sarguzashti",
-        "location"              : "Toshkent, Shahontohur ko'chasi,\nmarkaz-15, 10-uy, 29-xona",
+        "location"              : "Toshkent, Shayxontohur ko'chasi,\nmarkaz-15, 10-uy, 29-xona",
         "ull"                   : "Silicon Hub tomonidan ishlab chiqilgan va yaratilgan.",
         "rights"                : "© 2024 Silicon Hub. Barcha huquqlar himoyalangan."
     },
