location name fixed

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -157,7 +157,7 @@
         "paymentButton"         : "Go to Payment",
         "locationTitle"         : "OUR LOCATION.",
         "locationParagraph"     : "Head Office",
-        "locationName"          : "Tashkent, Shahontohur district,\ncenter-15, 10-house, 29-room",
+        "locationName"          : "Tashkent, Shayxontohur district,\ncenter-15, 10-house, 29-room",
         "emailTitle"            : "Have any questions?",
         "phoneTitle"            : "Want to discuss?",
         "locationPopup"         : "Our office is here!"
