--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -157,7 +157,7 @@
         "paymentButton"         : "To‘lovga o‘tish",
         "locationTitle"         : "BIZNING JOYLASHUVIMIZ.",
         "locationParagraph"     : "Bosh ofis",
-        "locationName"          : "Toshkent, Shahontohur ko'chasi,\nmarkaz-15, 10-uy, 29-xona",
+        "locationName"          : "Toshkent, Shayxontohur ko'chasi,\nmarkaz-15, 10-uy, 29-xona",
         "emailTitle"            : "Savollaringiz bormi?",   
         "phoneTitle"            : "Gaplashishni xohlaysizmi?",
         "locationPopup"         : "Bizning ofisimiz shu yerda!"
