translation fiex differentcard,contact,header changed

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -147,7 +147,7 @@
     "contactPage"               : {
         "title"                 : "Have a question? Let's chat",
         "description"           : "Let us help you plan a vacation.",
-        "nameInput"             : "Name",
+        "nameInput"             : "Full name",
         "phoneInput"            : "Phone Number",
         "placeInput"            : "Where do you want to go?",
         "fillAlert"             : "Please fill out all fields!",
