--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -147,7 +147,7 @@
     "contactPage"               : {
         "title"                 : "Есть вопросы? Давайте обсудим!",
         "description"           : "Поможем вам спланировать идеальный отпуск.",
-        "nameInput"             : "Имя",
+        "nameInput"             : "Ф.И.О.",
         "phoneInput"            : "Номер телефона",
         "placeInput"            : "Куда хотите поехать?",
         "fillAlert"             : "Пожалуйста заполните все поля!",
