--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -148,7 +148,7 @@
         "title"                 : "Есть вопросы? Давайте обсудим!",
         "description"           : "Поможем вам спланировать идеальный отпуск.",
         "nameInput"             : "Ф.И.О.",
-        "phoneInput"            : "Номер телефона",
+        "emailInput"            : "Адрес электронной почты",
         "placeInput"            : "Куда хотите поехать?",
         "fillAlert"             : "Пожалуйста заполните все поля!",
         "submitButton"          : "Отправить",
