--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -148,7 +148,7 @@
         "title"                 : "Savolingiz bormi?\nKeling, suhbatlashamiz",
         "description"           : "Sizga ta’tilingizni rejalashtirishda yordam beramiz.",
         "nameInput"             : "F.I.SH.",
-        "phoneInput"            : "Telefon raqami",
+        "emailInput"            : "elektron pochta manzili",
         "placeInput"            : "Qayerga borishni xohlaysiz?",
         "fillAlert"             : "Iltimos barcha bo'shliqlarni to'ldiring!",
         "submitButton"          : "Yuborish",
