--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -70,6 +70,9 @@
         "li3"                   : "Японская культура и кухня",
         "li4"                   : "Африканское сафари",
         "location"              : "Ташкент, улица Шайхонтохур,\nцентр-15, 10-дом, 29-комната",
+        "number"                : "Мобильный номер : +998880100011",
+        "worktime"              : "Время работы: 9:00-19:00",
+        "director"              : "Директор: Дехконова Нилюфар Дилмуродовна.",
         "ull"                   : "Разработка и дизайн: Silicon Hub.",
         "rights"                : "© 2024 Silicon Hub. Все права защищены."
     },
