--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -70,6 +70,9 @@
         "li3"                   : "Yaponiya madaniyati va oshxonasi",
         "li4"                   : "Afrika safari sarguzashti",
         "location"              : "Toshkent, Shayxontohur ko'chasi,\nmarkaz-15, 10-uy, 29-xona",
+        "number"                : "Telefon raqam : +998880100011",
+        "worktime"              : "Ish vaqti: 9:00-19:00",
+        "director"              : "Direktor: Dexkonova Nilufar Dilmurodovna.",
         "ull"                   : "Silicon Hub tomonidan ishlab chiqilgan va yaratilgan.",
         "rights"                : "© 2024 Silicon Hub. Barcha huquqlar himoyalangan."
     },
