--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -70,6 +70,9 @@
         "li3"                   : "Japanese Culture and Cuisine",
         "li4"                   : "African Safari Adventure",
         "location"              : "Tashkent, Shayxontohur district,\ncenter-15, 10-house, 29-room",
+        "number"                : "Mobile number : +998880100011",
+        "worktime"              : "Working hours: 9:00-19:00",
+        "director"              : "Director: Dexkonova Nilufar Dilmurodovna.",
         "ull"                   : "Design and Developed By Silicon Hub.",
         "rights"                : "© 2024 Silicon Hub. All Right Reserved."
     },
