--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -73,6 +73,7 @@
         "number"                : "Mobile number : +998880100011",
         "worktime"              : "Working hours: 9:00-19:00",
         "director"              : "Director: Dexkonova Nilufar Dilmurodovna.",
+        "email"                 : "Email address: viartours@gmail.com",
         "ull"                   : "Design and Developed By Silicon Hub.",
         "rights"                : "© 2024 Silicon Hub. All Right Reserved."
     },
