--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -73,6 +73,7 @@
         "number"                : "Мобильный номер : +998880100011",
         "worktime"              : "Время работы: 9:00-19:00",
         "director"              : "Директор: Дехконова Нилюфар Дилмуродовна.",
+        "email"                 : "Электронная почта: viartours@gmail.com",
         "ull"                   : "Разработка и дизайн: Silicon Hub.",
         "rights"                : "© 2024 Silicon Hub. Все права защищены."
     },
