--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -73,6 +73,7 @@
         "number"                : "Telefon raqam : +998880100011",
         "worktime"              : "Ish vaqti: 9:00-19:00",
         "director"              : "Direktor: Dexkonova Nilufar Dilmurodovna.",
+        "email"                 : "Elektron pochta: viartours@gmail.com",
         "ull"                   : "Silicon Hub tomonidan ishlab chiqilgan va yaratilgan.",
         "rights"                : "© 2024 Silicon Hub. Barcha huquqlar himoyalangan."
     },
