--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,17 +4,22 @@
     },
     "cards"                     : {
         "date"                  : "22 June 2024",
-        "guests"                : "Guests",
+        "guests"                : "Ask the operator for the exact price",
         "bookButton"            : "Book now",
-        "bali"                  : "Bali",
-        "paris"                 : "Paris",
-        "safari"                : "Safari",
-        "tokyo"                 : "Tokyo",
-        "kair"                  : "Kair",
-        "dubai"                 : "Dubai",
-        "rome"                  : "Rome",
-        "pekin"                 : "Pekin",
-        "moscow"                : "Moscow",
+        "Maldives"              : "Maldives",
+        "Vietnam"               : "Vietnam",
+        "Dubai"                 : "Dubai",
+        "Egypt"                 : "Egypt",
+        "Bali"                  : "Bali",
+        "Jordan"                : "Jordan",
+        "Sri Lanka"             : "Sri Lanka",
+        "Azerbaijan Baku"       : "Azerbaijan Baku",
+        "Georgia Batumi"        : "Georgia Batumi",
+        "Malaysia Kuala Lumpur" : "Malaysia Kuala Lumpur",
+        "Zanzibar"              : "Zanzibar",
+        "Montenegro"            : "Montenegro",
+        "Türkiye"               : "Türkiye",
+        "Antalya"               : "Antalya",
         "baliDescription"       : "A short text about this city is posted.",
         "parisDescription"      : "Brief information about Paris.",
         "safariDescription"     : "Brief information about Safari.",
