--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,17 +4,22 @@
     },
     "cards"                     : {
         "date"                  : "22 Июня 2024",
-        "guests"                : "Гостей",
+        "guests"                : "Точную цену узнайте у аператора",
         "bookButton"            : "Забронировать",
-        "bali"                  : "Бали",
-        "paris"                 : "Париж",
-        "safari"                : "Сафари",
-        "tokyo"                 : "Токио",
-        "kair"                  : "Каир",
-        "dubai"                 : "Дубай",
-        "rome"                  : "Рим",
-        "pekin"                 : "Пекин",
-        "moscow"                : "Москва",
+        "Maldives"              : "Мальдивы",
+        "Vietnam"               : "Въетнам",
+        "Dubai"                 : "Дубай",
+        "Egypt"                 : "Египет",
+        "Bali"                  : "Бали",
+        "Jordan"                : "Иордания",
+        "Sri Lanka"             : "Шри Ланка",
+        "Azerbaijan Baku"       : "Азербайджан Баку",
+        "Georgia Batumi"        : "Грузия Батуми",
+        "Malaysia Kuala Lumpur" : "Малазия Куала-Лампур",
+        "Zanzibar"              : "Занзибар",
+        "Montenegro"            : "Монтенегро",
+        "Türkiye"               : "Турция",
+        "Antalya"               : "Анталия",
         "baliDescription"       : "Краткая информация о Бали.",
         "parisDescription"      : "Краткая информация о Париже.",
         "safariDescription"     : "Краткая информация о Сафари.",
