--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -4,25 +4,30 @@
     },
     "cards"                     : {
         "date"                  : "22 Iyun 2024",
-        "guests"                : "Mehmonlar",
+        "guests"                : "Aniq narxni aperatordan bilib oling",
         "bookButton"            : "Band qilish",
-        "bali"                  : "Bali",
-        "paris"                 : "Parij",
-        "safari"                : "Safari",
-        "tokyo"                 : "Tokyo",
-        "kair"                  : "Kair",
-        "dubai"                 : "Dubai",
-        "rome"                  : "Rim",
-        "pekin"                 : "Pekin",
-        "moscow"                : "Moskva",
-        "baliDescription"       : "Bali haqida qisqacha ma’lumot.",
-        "parisDescription"      : "Parij haqida qisqacha ma’lumot.",
-        "safariDescription"     : "Safari haqida qisqacha ma’lumot.",
-        "tokyoDescription"      : "Tokyo haqida qisqacha ma’lumot.",
-        "kairDescription"       : "Kair haqida qisqacha ma’lumot.",
-        "dubaiDescription"      : "Dubai haqida qisqacha ma’lumot.",
-        "romeDescription"       : "Rim haqida qisqacha ma'lumot.",
-        "pekinDescription"      : "Pekin haqida qisqacha ma’lumot.",
+        "Maldives"              : "Maldiv",
+        "Vietnam"               : "Vyetnam",
+        "Dubai"                 : "Dubai",
+        "Egypt"                 : "Misr",
+        "Bali"                  : "Bali",
+        "Jordan"                : "Iordaniya",
+        "Sri Lanka"             : "Sri Lanka",
+        "Azerbaijan Baku"       : "Azerbayjon Baku",
+        "Georgia Batumi"        : "Gruziya Batumi",
+        "Malaysia Kuala Lumpur" : "Malaysia Kuala Lampur",
+        "Zanzibar"              : "Zanzibar",
+        "Montenegro"            : "Montenegro",
+        "Türkiye"               : "Turkiya",
+        "Antalya"               : "Antalya",
+        "baliDescription"       : "Maldiv haqida qisqacha ma’lumot.",
+        "parisDescription"      : "Vyetnam haqida qisqacha ma’lumot.",
+        "safariDescription"     : "Dubai haqida qisqacha ma’lumot.",
+        "tokyoDescription"      : "Misr haqida qisqacha ma’lumot.",
+        "kairDescription"       : "Bali haqida qisqacha ma’lumot.",
+        "dubaiDescription"      : "Iordaniya haqida qisqacha ma’lumot.",
+        "romeDescription"       : "Sri Lanka haqida qisqacha ma'lumot.",
+        "pekinDescription"      : "Azerbayjon haqida qisqacha ma’lumot.",
         "moscowDescription"     : "Moskva haqida qisqacha ma’lumot."
     },
     "chooseUs"                  : {
